1.修正了登录后无法跳转bug 2.新增了一个用于检验登录权限的StatusServlet 3.缩小了权限过滤器过滤的范围，设置为StatusServlet的过滤路径 4.修正了前端登录界面消息共用问题 5.修正了前端用户登录状态显示出错bug

--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -17,12 +17,28 @@
     <servlet-name>UserServlet</servlet-name>
     <url-pattern>/Login</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>ReleaseSaleServlet</servlet-name>
+    <servlet-class>controller.ReleaseSaleServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ReleaseSaleServlet</servlet-name>
+    <url-pattern>/releaseSale</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <servlet-name>StatusServlet</servlet-name>
+    <servlet-class>controller.StatusServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>StatusServlet</servlet-name>
+    <url-pattern>/isStatus</url-pattern>
+  </servlet-mapping>
   <filter>
     <filter-name>login</filter-name>
     <filter-class>filter.LoginFilter</filter-class>
   </filter>
   <filter-mapping>
     <filter-name>login</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/isStatus</url-pattern>
   </filter-mapping>
 </web-app>
